# cblas-strassen

./: CMakeLists.txt  README.md
cmake/: FindMKL.cmake
include/: cblas_strassen.h
src/: cblas_cstrassen.c  cblas_dstrassen.c  cblas_sstrassen.c  cblas_zstrassen.c
test/: test_cstrassen.c  test_dstrassen.c  test_sstrassen.c  test_times.c  test_zstrassen.c
